--- a/package.json
+++ b/package.json
@@ -7,17 +7,30 @@
     "node": "16.x"
   },
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "build": "webpack --env production",
+    "dev": "webpack --watch"
   },
   "repository": "https://github.com/regions-of-indonesia/api.git",
   "author": "flamrdevs <flamrdevs@gmail.com>",
   "license": "GPL-3.0",
   "dependencies": {
-    "fastify": "^4.5.3"
+    "@fastify/cors": "^8.1.0",
+    "@fastify/helmet": "^10.0.0",
+    "fastify": "^4.5.3",
+    "keyv": "^4.5.0",
+    "ramda": "^0.28.0"
   },
   "devDependencies": {
     "@types/node": "^18.7.16",
-    "typescript": "^4.8.3"
+    "@types/ramda": "^0.28.15",
+    "nodemon-webpack-plugin": "^4.8.1",
+    "rimraf": "^3.0.2",
+    "ts-loader": "^9.3.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
+    "typescript": "^4.8.3",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
