--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "flamrdevs <flamrdevs@gmail.com>",
   "license": "GPL-3.0",
   "dependencies": {
+    "@fastify/caching": "^8.0.1",
     "@fastify/cors": "^8.1.0",
     "@fastify/helmet": "^10.0.0",
     "fastify": "^4.5.3",
