--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@regions-of-indonesia/api",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Regions of Indonesia API",
   "main": "dist/index.js",
   "engines": {
@@ -15,10 +15,13 @@
   "author": "flamrdevs <flamrdevs@gmail.com>",
   "license": "GPL-3.0",
   "dependencies": {
-    "@fastify/caching": "^8.0.1",
     "@fastify/cors": "^8.1.0",
     "@fastify/helmet": "^10.0.0",
+    "@fastify/sensible": "^5.1.1",
+    "@regions-of-indonesia/data": "^0.5.0",
     "fastify": "^4.5.3",
+    "fuse.js": "^6.6.2",
+    "javascript-yesterday": "^1.0.1-alpha.6",
     "keyv": "^4.5.0",
     "ramda": "^0.28.0"
   },
