--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@fastify/cors": "^8.1.0",
     "@fastify/helmet": "^10.0.0",
     "@fastify/sensible": "^5.1.1",
+    "@lyrasearch/lyra": "^0.2.7",
     "@regions-of-indonesia/data": "^2.0.0",
     "fastify": "^4.5.3",
-    "fuse.js": "^6.6.2",
     "javascript-yesterday": "^1.1.0",
     "keyv": "^4.5.0",
     "ramda": "^0.28.0"
