--- a/package.json
+++ b/package.json
@@ -15,27 +15,26 @@
   "author": "flamrdevs <flamrdevs@gmail.com>",
   "license": "GPL-3.0",
   "dependencies": {
-    "@fastify/compress": "^6.1.1",
-    "@fastify/cors": "^8.1.0",
-    "@fastify/helmet": "^10.0.0",
+    "@fastify/cors": "^8.2.0",
+    "@fastify/helmet": "^10.1.0",
     "@fastify/sensible": "^5.1.1",
-    "@lyrasearch/lyra": "^0.2.7",
-    "@regions-of-indonesia/data": "^2.0.0",
-    "fastify": "^4.5.3",
-    "javascript-yesterday": "^1.1.0",
-    "keyv": "^4.5.0",
+    "@regions-of-indonesia/data": "^2.1.0",
+    "fastify": "^4.10.2",
+    "fuse.js": "^6.6.2",
+    "javascript-yesterday": "^1.2.0",
+    "keyv": "^4.5.2",
     "ramda": "^0.28.0"
   },
   "devDependencies": {
-    "@types/node": "^18.7.16",
-    "@types/ramda": "^0.28.15",
+    "@types/node": "^18.11.9",
+    "@types/ramda": "^0.28.20",
     "nodemon-webpack-plugin": "^4.8.1",
     "rimraf": "^3.0.2",
-    "ts-loader": "^9.3.1",
+    "ts-loader": "^9.4.1",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
-    "typescript": "^4.8.3",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
+    "typescript": "^4.9.3",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0",
     "webpack-node-externals": "^3.0.0"
   }
 }
